# zero2prod

./: .editorconfig  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: general.yml  rust.yml
app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.app  Dockerfile.db-init  docker-compose.yml
app/configuration/: base.yaml  production.yaml
app/scripts/: init_db.sh  watch.sh
app/scripts-dev/: lint.sh
app/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
app/src/routes/: health_check.rs  subscriptions.rs
app/tests/: health_check.rs  subscriptions.rs  tests.rs
hello-world-actix-web/: Cargo.toml  README.md
hello-world-actix-web/src/: main.rs
src/: main.rs
tests/: health_check.rs
