[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

config = "0.14.1"

serde = { version = "1", features = ["derive"] }

uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
    version = "0.8.2"
    default-features = false
    features = [
        "chrono",
        "macros",
        "migrate",
        "postgres",
        "runtime-tokio-rustls",
        "uuid"
]

[dev-dependencies]
reqwest = "0.12.9"
